; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_process.c_mac_proc_check_map_anon.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_process.c_mac_proc_check_map_anon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@proc_check_map_anon = common dso_local global i32 0, align 4
@mac_vm_enforce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_proc_check_map_anon(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32* %5, i32** %13, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @mac_proc_check_enforce(i32 %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %34

20:                                               ; preds = %6
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @kauth_cred_proc_ref(i32 %21)
  store i32 %22, i32* %14, align 4
  %23 = load i32, i32* @proc_check_map_anon, align 4
  %24 = load i32, i32* %8, align 4
  %25 = load i32, i32* %14, align 4
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* %10, align 4
  %28 = load i32, i32* %11, align 4
  %29 = load i32, i32* %12, align 4
  %30 = load i32*, i32** %13, align 8
  %31 = call i32 @MAC_CHECK(i32 %23, i32 %24, i32 %25, i32 %26, i32 %27, i32 %28, i32 %29, i32* %30)
  %32 = call i32 @kauth_cred_unref(i32* %14)
  %33 = load i32, i32* %15, align 4
  store i32 %33, i32* %7, align 4
  br label %34

34:                                               ; preds = %20, %19
  %35 = load i32, i32* %7, align 4
  ret i32 %35
}

declare dso_local i32 @mac_proc_check_enforce(i32) #1

declare dso_local i32 @kauth_cred_proc_ref(i32) #1

declare dso_local i32 @MAC_CHECK(i32, i32, i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @kauth_cred_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
